--- a/projects.html
+++ b/projects.html
@@ -63,10 +63,10 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 24, 2017</span> -->
-										<h2><a href="#">SMART ATS CHECKER APPLICATION<br />System</a></h2>
+										<h2><a href="#">SMART ATS CHECKER APPLICATION<br /></a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/2pic.png" alt="" /></a>
-									<p>Developed a movie recommendation system using the TMDB dataset, Streamlit, and Python. Utilized Pandas for data manipulation and implemented recommendation logic to provide personalized movie suggestions. The interactive web app enhances user experience with intuitive navigation and real-time recommendations.</p>
+									<p>Developed an ATS checker application, it is useful for checking resume match between job description and resume,used Streamlit for frontend, and Python. The interactive web app enhances user experience with results from Google open source Large Language Model</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/aishwarya30998/ATSChecker_Using_GoogleLLM" class="button">View Code</a></li>
 									</ul>
@@ -78,7 +78,7 @@
 										Evaluation</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/3pic.png" alt="" /></a>
-									<p>Developed an end-to-end student performance evaluation system, including model building, data preparation, and SQL connectivity. Implemented a CI/CD pipeline and model monitoring using MLOps practices and Dagshub for efficient, real-time insights and continuous improvement of the model.</p>
+									<p>Developed an end-to-end student performance evaluation system, including data injestion,transformation and model training also implemented data pipelines for new data prediction. Implemented Logging and exception handling. Implemented a CI/CD pipeline and model monitoring using MLOps practices and AWS ECS, Ec2 and GitHub Actions and Docker for efficient, real-time insights and continuous improvement of the model.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/aishwarya30998/Student_Exam_Performance_Prediction" class="button">View Code</a></li>
 									</ul>
@@ -90,7 +90,7 @@
 										System</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/4pic.png" alt="" /></a>
-									<p>Designed a pneumonia detection system using Convolutional Neural Networks (CNN). Utilized a robust dataset of chest X-ray images for training and validation. The model accurately identifies pneumonia cases, enhancing early diagnosis and treatment through an intuitive and efficient deep learning approach.</p>
+									<p>Developed End- to -end Blog Generation Application Using AWS Bedrock LLM and also another appication using Lama2 LLm model which is imported from Hugging face Library.These 2 LLM models generates Blogs based on topics and number of words given based on Llama2 model and AWS Bedrock LLM output</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/aishwarya30998/Blog_Generation_Using_Llama2_LLM" class="button">View Code</a></li>
 									</ul>
@@ -102,7 +102,7 @@
 										Classification</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/5pic.png" alt="" /></a>
-									<p>Implemented a text emotion classification system using advanced NLP techniques. Leveraged labeled datasets to train a model that accurately detects emotions in text. This project enhances sentiment analysis capabilities, providing valuable insights for applications like customer feedback and social media monitoring.</p>
+									<p>Developed a chatbot using Gemini LLM. Used API call to get opensource models. This chatbot includes Question and Answering, image Analysis, embedding of given text and Conversational model capabilities of Gemini LLM</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/aishwarya30998/Gemini_LLM_APP" class="button">View Code</a></li>
 									</ul>
@@ -110,11 +110,10 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 11, 2017</span> -->
-										<h2><a href="#">IMAGE ANALYSIS USING GEMINI LLM<br />
-										Bot</a></h2>
+										<h2><a href="#">IMAGE ANALYSIS USING GEMINI LLM<br /></a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/6pic.png" alt="" /></a>
-									<p>Developed a text-to-SQL system using a locally downloaded LLM (Google Gemma), Streamlit, Python-SQL connector, and SQL database. User queries are processed by the LLM, generating SQL queries that retrieve information from the database, enabling seamless natural language interaction with data.</p>
+									<p>Used Gemini Vision Pro open source LLM for this application to analyze images uploaded, Streamlit used for front ende. User queries are processed by the LLM enabling seamless interaction between user and application.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/aishwarya30998/GeminiPro_API_Image_and_Text_QnA_Generation" class="button">View Code</a></li>
 									</ul>
@@ -126,7 +125,7 @@
 										System</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/7pic.png" alt="" /></a>
-									<p>Designed a fraud detection system utilizing machine learning algorithms to analyze transactional data. Implemented data preprocessing, feature engineering, and model training to identify fraudulent activities. The solution enhances security and reduces financial risks with accurate, real-time detection capabilities.</p>
+									<p>Used the Stanford Alpaca dataset, reduced its size using cross-validation, and stored it in the Hugging Face hub. Loaded the FLAN-T5 LLM model from Hugging Face. Performed full fine-tuning, which has 10 billion parameters, and checked the result using the ROUGE metric. Also fine-tuned the model with PEFT and LoRA config weights to reduce the number of parameters to be trained and checked the ROUGE metric differences between human-evaluated and fine-tuned outputs.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/aishwarya30998/Final_MS_Project" class="button">View Code</a></li>
 									</ul>
