file name change

--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="generic.html" class="logo">About Me</a>
+						<a href="index.html" class="logo">About Me</a>
 					</header>
 
 
@@ -32,7 +32,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li id="projects-nav" class="active"><a href="#header">Projects</a></li>
-							<li id="about-nav"><a href="generic.html">About Me</a></li>
+							<li id="about-nav"><a href="index.html">About Me</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/aishwarya-pentyala/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
