--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="projects.html">Projects</a></li>
-							<li class="active"><a href="generic.html">About Me</a></li>
+							<li class="active"><a href="index.html">About Me</a></li>
 							<!-- <li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
 						<ul class="icons">
