--- a/projects.html
+++ b/projects.html
@@ -15,8 +15,8 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Aishwarya Pentyala</h1>
-						<h2>ML/AI Engineer</h2> 
-						<h3>specializing in Python, Data Analysis, SQL,Data science, Machine Learning, NLP, Deep Learning, with advanced skills in fine-tuning Large Language Models and integrating them to cloud and user applications for cutting-edge AI solutions.</h3>
+						<h2>DATA/ML/AI Engineer</h2> 
+						<h3>Specializing in Python, Data Analysis, SQL, Data Engineering, Snowflake, Data Build tool, AWS services, Data science, Machine Learning, NLP, Deep Learning, with advanced skills in fine-tuning Large Language Models and integrating them to cloud and user applications for cutting-edge AI solutions.</h3>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
