--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
     <div class="hero-content">
       <div class="hero-badge">Open to Opportunities</div>
       <h1 class="hero-name">Aishwarya <span class="gradient-text">Pentyala</span></h1>
-      <h2 class="hero-title">DATA / ML / AI Engineer</h2>
+      <h2 class="hero-title">AI Engineer</h2>
       <p class="hero-subtitle">
         Building intelligent systems with LLMs, RAG pipelines, and MLOps &mdash; turning complex AI research into production-ready applications.
       </p>
