--- a/index.html
+++ b/index.html
@@ -498,6 +498,8 @@
         <span>AWS</span>
         <span>NLP</span>
         <span>LangChain</span>
+        <span>FastAPI</span>
+        <span>Langfuse</span>
       </div>
     </div>
     <div class="scroll-indicator">
@@ -522,7 +524,7 @@
             I’m an AI Engineer with 4+ years of experience building production-grade AI platforms, specializing in Generative AI, agentic workflows, and scalable ML systems. I hold an
             MS in Artificial Intelligence.
           <p>
-            I design and deploy end-to-end AI solutions — from fine-tuning foundation models and architecting RAG pipelines to building FastAPI services, AI agents with tool calling, and cloud-native MLOps workflows. My work spans AWS (Bedrock, Lambda, ECS), LangChain/LangGraph, vector databases, and full-stack deployment of LLM-powered applications.
+            I design and deploy end-to-end AI solutions — from fine-tuning foundation models and architecting RAG pipelines to building FastAPI services, AI agents with tool calling, and cloud-native MLOps workflows. My work spans AWS (Bedrock, Lambda, ECS), LangChain/LangGraph, vector databases,Langfuse for observability and full-stack deployment of LLM-powered applications.
           </p>
           <p>
             Recently, I’ve built voice assistants, LLM evaluation APIs, and knowledge-aware AI systems that operate reliably in real production environments. 
@@ -537,7 +539,7 @@
               <span class="highlight-label">AI/ML Projects</span>
             </div>
             <div class="highlight-item">
-              <span class="highlight-number">3+</span>
+              <span class="highlight-number">4+</span>
               <span class="highlight-label">Years Experience</span>
             </div>
             <div class="highlight-item">
@@ -590,13 +592,13 @@
         <div class="skill-category">
           <h3 class="category-title"><i class="fas fa-cloud" style="color:#10b981"></i> Cloud & Infrastructure</h3>
           <div class="skill-tags">
-            <span class="tag tag-cloud">AWS (EC2, S3, ECS, Bedrock)</span>
+            <span class="tag tag-cloud">AWS</span>
             <span class="tag tag-cloud">Google Cloud Platform</span>
             <span class="tag tag-cloud">Docker</span>
             <span class="tag tag-cloud">GitHub Actions</span>
             <span class="tag tag-cloud">MLOps</span>
             <span class="tag tag-cloud">Snowflake</span>
-            <span class="tag tag-cloud">dbt</span>
+            <span class="tag tag-cloud">Azure AI</span>
             <span class="tag tag-cloud">CI/CD</span>
           </div>
         </div>
@@ -608,10 +610,11 @@
             <span class="tag tag-fw">FastAPI</span>
             <span class="tag tag-fw">Django</span>
             <span class="tag tag-fw">React</span>
-            <span class="tag tag-fw">Haystack</span>
-            <span class="tag tag-fw">Whisper</span>
+            <span class="tag tag-fw">Pandas</span>
+            <span class="tag tag-fw">Numpy</span>
             <span class="tag tag-fw">ChromaDB</span>
             <span class="tag tag-fw">FAISS</span>
+            <span class="tag tag-fw">Langfuse</span>
           </div>
         </div>
 
@@ -621,9 +624,10 @@
             <span class="tag tag-tool">VS Code</span>
             <span class="tag tag-tool">Jupyter</span>
             <span class="tag tag-tool">Git</span>
-            <span class="tag tag-tool">Salesforce</span>
+            <span class="tag tag-tool">Cursor</span>
             <span class="tag tag-tool">Hugging Face Hub</span>
             <span class="tag tag-tool">MLflow</span>
+            <span class="tag tag-tool">Claude Code</span>
           </div>
         </div>
 
