--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@
       <div class="nav-social">
         <a href="https://www.linkedin.com/in/aishwarya-pentyala/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/aishwarya30998" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+        <a href="https://huggingface.co/Aishwarya30998" target="_blank" aria-label="Hugging Face"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 120 120" fill="currentColor"><path d="M37.6 58.4c-2.8-5.2-8.4-6.4-12.8-4.4-4.4 2-6.4 7.2-4.4 12.4 1.2 3.2 4 5.6 7.2 6.4-.4 1.6-.4 3.2 0 4.8-4.8.8-8.4 4.4-9.2 9.2-1.2 6 2.8 11.6 8.8 12.8 6 1.2 11.6-2.8 12.8-8.8.4-2 .4-4-.4-5.6 3.2-1.6 5.6-4.4 6.4-8 1.6-5.2-.8-10.8-5.2-14zm-8 34.8c-3.2.4-6-1.6-6.8-4.8-.4-3.2 1.6-6 4.8-6.8 3.2-.4 6 1.6 6.8 4.8.4 3.2-1.6 6.4-4.8 6.8zm4-20.4c-2.4.4-4.8-1.2-5.2-3.6-.4-2.4 1.2-4.8 3.6-5.2 2.4-.4 4.8 1.2 5.2 3.6.4 2.4-1.2 4.8-3.6 5.2zM95.2 54c-4.4-2-10 0-12.8 4.4-4.4-3.2-6.8-8.8-5.2-14 .8-3.6 3.2-6.4 6.4-8-.8-1.6-.8-3.6-.4-5.6 6-1.2 10-6.8 8.8-12.8-1.2-6-6.8-10-12.8-8.8-6 1.2-10 6.8-8.8 12.8.8 4.8 4.4 8.4 9.2 9.2.4 1.6.4 3.2 0 4.8 3.2-.8 6-3.2 7.2-6.4 2-5.2 0-10.4-4.4-12.4M84 25.2c3.2-.4 6 1.6 6.8 4.8.4 3.2-1.6 6-4.8 6.8-3.2.4-6-1.6-6.8-4.8-.8-3.2 1.6-6.4 4.8-6.8z"/><path d="M60 12C33.6 12 12 33.6 12 60s21.6 48 48 48 48-21.6 48-48S86.4 12 60 12zm0 88c-22 0-40-18-40-40s18-40 40-40 40 18 40 40-18 40-40 40z"/></svg></a>
       </div>
       <button class="nav-hamburger" id="nav-toggle" aria-label="Toggle menu" aria-expanded="false">
         <i class="fas fa-bars"></i>
@@ -697,6 +698,7 @@
       <div class="footer-social">
         <a href="https://www.linkedin.com/in/aishwarya-pentyala/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/aishwarya30998" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+        <a href="https://huggingface.co/Aishwarya30998" target="_blank" aria-label="Hugging Face"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 120 120" fill="currentColor"><path d="M37.6 58.4c-2.8-5.2-8.4-6.4-12.8-4.4-4.4 2-6.4 7.2-4.4 12.4 1.2 3.2 4 5.6 7.2 6.4-.4 1.6-.4 3.2 0 4.8-4.8.8-8.4 4.4-9.2 9.2-1.2 6 2.8 11.6 8.8 12.8 6 1.2 11.6-2.8 12.8-8.8.4-2 .4-4-.4-5.6 3.2-1.6 5.6-4.4 6.4-8 1.6-5.2-.8-10.8-5.2-14zm-8 34.8c-3.2.4-6-1.6-6.8-4.8-.4-3.2 1.6-6 4.8-6.8 3.2-.4 6 1.6 6.8 4.8.4 3.2-1.6 6.4-4.8 6.8zm4-20.4c-2.4.4-4.8-1.2-5.2-3.6-.4-2.4 1.2-4.8 3.6-5.2 2.4-.4 4.8 1.2 5.2 3.6.4 2.4-1.2 4.8-3.6 5.2zM95.2 54c-4.4-2-10 0-12.8 4.4-4.4-3.2-6.8-8.8-5.2-14 .8-3.6 3.2-6.4 6.4-8-.8-1.6-.8-3.6-.4-5.6 6-1.2 10-6.8 8.8-12.8-1.2-6-6.8-10-12.8-8.8-6 1.2-10 6.8-8.8 12.8.8 4.8 4.4 8.4 9.2 9.2.4 1.6.4 3.2 0 4.8 3.2-.8 6-3.2 7.2-6.4 2-5.2 0-10.4-4.4-12.4M84 25.2c3.2-.4 6 1.6 6.8 4.8.4 3.2-1.6 6-4.8 6.8-3.2.4-6-1.6-6.8-4.8-.8-3.2 1.6-6.4 4.8-6.8z"/><path d="M60 12C33.6 12 12 33.6 12 60s21.6 48 48 48 48-21.6 48-48S86.4 12 60 12zm0 88c-22 0-40-18-40-40s18-40 40-40 40 18 40 40-18 40-40 40z"/></svg></a>
       </div>
       <p class="footer-copy">&copy; 2025 Aishwarya Pentyala. All rights reserved.</p>
     </div>
